--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <scriptasyncdefersrc="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><imgsrc="https://queue.simpleanalyticscdn.com/noscript.gif"alt=""referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
