--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <scriptasyncdefersrc="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><imgsrc="https://queue.simpleanalyticscdn.com/noscript.gif"alt=""referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <!-- 100% privacy-first analytics -->
+<script asyncdefer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
